--- a/src/home/index.html
+++ b/src/home/index.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<link href="https://fonts.googleapis.com/css?family=Poppins:400,500|Roboto" rel="stylesheet">
     <link href="https://account.kenzap.com/css/bootstrap.5.0.2.1.0.css" rel="stylesheet" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles.css?t=${timestamp}" rel="stylesheet">
 
     <style>
 
@@ -273,6 +273,6 @@ body.lang-o-active .lang-holder.one .lang-drop {
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script defer src="index.js"></script>
+    <script defer src="index.js?t=${timestamp}"></script>
 	</body>
 </html>
